--- a/assets/scripts/templates/list-items.handlebars
+++ b/assets/scripts/templates/list-items.handlebars
@@ -1,7 +1,7 @@
 
 {{#each lists as |list|}}
 {{log list}}
-  <section data-id={{list.id}}>
+  <section data-id={{list._id}}>
     
     <p> Title
       <h4> {{list.title}} </h4>
@@ -10,12 +10,11 @@
       <h4> {{list.description}} </h4>
     </p>
 
-{{!-- <button data-toggle="modal" data-target="#list-delete-modal"
-    data-id={{list.id}} class="btn btn-danger btn-sm delete-list">Delete</button> --}}
 
-<button data-toggle="modal" data-target="#update-item-modal" data-id={{list.id}} id ="update-item">Update</button>
-<button data-id={{list.id}} id ="delete-item">Delete</button>
-  </section>
+<button data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}} class ="update-item-button">Update</button>
+<button data-id={{list._id}} class ="delete-item-button">Delete</button>
+</section>
+
 {{/each}}
 
 
