Clear all forms at appropriate times
Use .always() instead of .finally() for jquery
Use .always() to clear forms and set temp id to null
Got rid of some console logs
Change handlebars elements to use classes instead of ID's

Close #30
Close #19
Close #32

Co-authored-by: flagithub1 <frazem60@gmail.com>
Co-authored-by: lindsay-kaufman <linds234@gmail.com>
Co-authored-by: Shantala Narayan <mail2shantala@gmail.com>

--- a/assets/scripts/templates/list-items.handlebars
+++ b/assets/scripts/templates/list-items.handlebars
@@ -1,22 +1,18 @@
-
 {{#each lists as |list|}}
-{{log list}}
-  <section data-id={{list._id}}>
-    
-    <p> Title
-      <h4> {{list.title}} </h4>
-    </p>
-    <p> Description
-      <h4> {{list.description}} </h4>
-    </p>
+{{!-- {{log list}} --}}
+<section data-id={{list._id}}>
+
+  <p> Title
+    <h4> {{list.title}} </h4>
+  </p>
+  <p> Description
+    <h4> {{list.description}} </h4>
+  </p>
 
 
-<button data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}} class ="update-item-button">Update</button>
-<button data-id={{list._id}} class ="delete-item-button">Delete</button>
+  <button data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}}
+    class="update-item-button">Update</button>
+  <button data-id={{list._id}} class="delete-item-button">Delete</button>
 </section>
 
 {{/each}}
-
-
-
-
