Add background image to body
Use css to make sure it covers whole page at all times.
Close #39

Co-authored-by: Shantala <mail2shantala@gmail.com>
Co-authored-by: Lindsay <linds234@gmail.com>
Co-authored-by: Franky <frazem60@gmail.com>

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,4 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
+body {
+  background-image: url('../../public/bucket-list.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
 .completed{
   text-decoration: line-through;
 }
