--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,14 +10,13 @@ body {
   text-decoration: line-through;
 }
 
-nav {
-  display: inline;
+// nav {
 
-  h3 {
-    float: left;
-  }
+//   h3 {
+//     float: left;
+//   }
 
-  .change-pw, .sign-out {
-    float: right;
-  }
-}
+//   .change-pw, .sign-out {
+//     float: right;
+//   }
+// }
