Create a modal for creating list items
- Create modal in html
- Create button for handlebars to trigger modal
- Clean up HTML code and reorganize it
- Add function to close change-pw modal when api call is made
- Add function to close create-item modal when api call is made
- Refactor the modal event listeners so that whenever any modal
is closed, it will trigger a form reset
- Format code with linter

Close #41

--- a/assets/scripts/templates/list-items.handlebars
+++ b/assets/scripts/templates/list-items.handlebars
@@ -1,3 +1,5 @@
+<button data-toggle="modal" data-target="#create-item-modal" id='show-create-modal'>+</button>
+
 {{#each lists as |list|}}
 {{!-- {{log list}} --}}
 <section data-id={{list._id}}>
@@ -12,7 +14,7 @@
 
   {{else}}
   <p> Element
-    {{!-- we need to make the checkbox start checked or unchecked baseed on the elements state --}}
+    {{!-- we need to make the checkbox start checked or unchecked based on the elements state --}}
     <input class="checkbox" data-id={{list._id}} type="checkbox">
     <h4> {{list.title}} </h4>
     <h6> {{list.description}} </h6>
