Positioning with bootstrap
Co-authored-by: Joe <joe10994@gmail.com>

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,6 +7,12 @@ body {
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
+  font-family: 'Quicksand', sans-serif;
+
+  h3 {
+    padding-left: 10px;
+  }
+
 }
 .completed{
   text-decoration: line-through;
@@ -15,23 +21,48 @@ body {
 #bucket-list {
   background-color: $red;
   border-radius: 30px;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 35px;
   max-height: 700px;
   opacity: 65%;
+  color: rgba(255, 255, 255, 1);
   overflow: scroll;
 
   #show-create-modal {
     background-color: transparent;
     border: none;
-    color: lighten($red, 50%);
+    color: white;
     float: right;
-    font-size: 4vw;
+    font-size: 5vw;
      
   }
- 
+
   #show-create-modal:hover {
-    color:white;
+    color: $bright-blue;
  }
-  
+  .element{
+    border-top: 1px solid white;
+    padding: 20px;
+  }
+
+ .title {
+   font-size: 25px;
+ }
+
+ .description {
+   font-size: 18px;
+   margin-left: 20px;
+   margin-top: 10px;
+ }
+
+ .list-button {
+   background-color: $bright-blue;
+   border-radius: 30px;
+ }
+
+ .checkbox {
+   margin-right: 10px;
+ }
 
 }
 
