--- a/assets/scripts/templates/list-items.handlebars
+++ b/assets/scripts/templates/list-items.handlebars
@@ -1,9 +1,9 @@
 
 
-<div id="message " class = "row">
-  <div class = "  empty col-10 mr-0"></div>
+<div id="message" class = "row">
+  <div class = " empty col-10 mr-0">Bucket List</div>
   <div class = "empty col-2">
-<button  data-toggle="modal" data-target="#create-item-modal" id='show-create-modal'>+</button>
+<button data-toggle="modal" data-target="#create-item-modal" id='show-create-modal'>+</button>
 </div>
 </div>
 
@@ -12,29 +12,35 @@
 
   {{#if list.completed}}
   {{!-- completed state --}}
-  <div class="completed row"> 
-    <input class="checkbox col-1" data-id={{list._id}} type="checkbox" checked>
-    <span class="completed col-7"> {{list.title}} </span>
-    <button class="update-item-button list-button btn col-2" data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}} >Update
+  <div class="element">
+  <div class="row"> 
+    <div class="col-12 col-md-8">
+    <input class="checkbox align-middle" data-id={{list._id}} type="checkbox" checked>
+    <span class="title completed align-middle"> {{list.title}} </span>
+    </div>
+    <button class="update-item-button list-button btn btn-xs col-6 col-md-2" data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}} >Update
     </button>
-<button class = "list-button btn delete-item-button col-2" data-id={{list._id}}>Delete</button>
+<button class = "pl-1 list-button btn btn-xs delete-item-button col-6 col-md-2" data-id={{list._id}}>Delete</button>
 </div>
 <div class="row">
-  <div class="col-1"></div>
-  <span class="completed col-11"> {{list.description}} </span>
+  <span class="description col-12"> {{list.description}} </span>
+</div>
 </div>
  {{!-- end completed state --}}
   {{else}}
+  <div class="element">
   <div class = "row">
-  <input class="checkbox col-1" data-id={{list._id}} type="checkbox" >
-    <span class="col-7"> {{list.title}} </span>
-    <button class = "update-item-button list-button btn col-2" data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}}>Update</button>
-    <button class = "list-button btn delete-item-button col-2" data-id={{list._id}}>Delete</button>
+    <div class="col-12 col-md-8">
+  <input class="checkbox align-middle" data-id={{list._id}} type="checkbox" >
+    <span class="title align-middle"> {{list.title}} </span>
+    </div>
+    <button class = "update-item-button list-button btn btn-xs col-6 col-md-2" data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}}>Update</button>
+    <button class = "pl-1 list-button btn btn-xs delete-item-button col-6 col-md-2" data-id={{list._id}}>Delete</button>
     </div>
     
     <div class="row">
-  <div class="col-1"></div>
-  <span class="col-11"> {{list.description}} </span>
+  <span class="description col-12"> {{list.description}} </span>
+</div>
 </div>
 
  
