--- a/assets/scripts/templates/list-items.handlebars
+++ b/assets/scripts/templates/list-items.handlebars
@@ -1,7 +1,7 @@
 
 
-<div id="message" class = "row">
-  <div class = " empty col-10 mr-0">Bucket List</div>
+<div class = "row">
+  <div id="message" class = "empty col-10 mr-0">Bucket List</div>
   <div class = "empty col-2">
 <button data-toggle="modal" data-target="#create-item-modal" id='show-create-modal'>+</button>
 </div>
@@ -42,8 +42,6 @@
   <span class="description col-12"> {{list.description}} </span>
 </div>
 </div>
-
- 
   {{/if}}
 </section>
 
