--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 
 body {
-  background-image: url('../../public/bucket-list.jpeg');
+  background-image: url('public/bucket-list.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
