Fix bug where items weren't fetched on sign in
Style forms to match each other

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -84,3 +84,15 @@ nav {
   padding-bottom: 70px;
 }
 
+.min-width{
+  @media (max-width: 768px) {
+    width:60vw;
+    margin-bottom: 5px;
+  }
+}
+
+.margin-bottom {
+  @media (max-width: 768px) {
+    margin-bottom: 5px;
+  }
+}
