--- a/assets/scripts/templates/list-items.handlebars
+++ b/assets/scripts/templates/list-items.handlebars
@@ -1,10 +1,8 @@
-
-
-<div class = "row">
-  <div id="message" class = "empty col-10 mr-0">Bucket List</div>
-  <div class = "empty col-2">
-<button data-toggle="modal" data-target="#create-item-modal" id='show-create-modal'>+</button>
-</div>
+<div class="row">
+  <div id="message" class="empty col-10 mr-0">Bucket List</div>
+  <div class="empty col-2">
+    <button data-toggle="modal" data-target="#create-item-modal" id='show-create-modal'>+</button>
+  </div>
 </div>
 
 {{#each lists as |list|}}
@@ -13,35 +11,39 @@
   {{#if list.completed}}
   {{!-- completed state --}}
   <div class="element">
+    <div class="row">
   <div class="row"> 
-    <div class="col-12 col-md-8">
-    <input class="checkbox align-middle" data-id={{list._id}} type="checkbox" checked>
-    <span class="title completed align-middle"> {{list.title}} </span>
+    <div class="row">
+      <div class="col-12 col-md-8">
+        <input class="checkbox align-middle" data-id={{list._id}} type="checkbox" checked>
+        <span class="title completed align-middle"> {{list.title}} </span>
+      </div>
+      <button class="update-item-button list-button btn btn-xs col-6 col-md-2" data-toggle="modal"
+        data-target="#update-item-modal" data-id={{list._id}}>Update
+      </button>
+      <button class="pl-1 list-button btn btn-xs delete-item-button col-6 col-md-2" data-id={{list._id}}>Delete</button>
     </div>
-    <button class="update-item-button list-button btn btn-xs col-6 col-md-2" data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}} >Update
-    </button>
-<button class = "pl-1 list-button btn btn-xs delete-item-button col-6 col-md-2" data-id={{list._id}}>Delete</button>
-</div>
-<div class="row">
-  <span class="description col-12"> {{list.description}} </span>
-</div>
-</div>
- {{!-- end completed state --}}
+    <div class="row">
+      <span class="description col-12"> {{list.description}} </span>
+    </div>
+  </div>
+  {{!-- end completed state --}}
   {{else}}
   <div class="element">
-  <div class = "row">
-    <div class="col-12 col-md-8">
-  <input class="checkbox align-middle" data-id={{list._id}} type="checkbox" >
-    <span class="title align-middle"> {{list.title}} </span>
-    </div>
-    <button class = "update-item-button list-button btn btn-xs col-6 col-md-2" data-toggle="modal" data-target="#update-item-modal" data-id={{list._id}}>Update</button>
-    <button class = "pl-1 list-button btn btn-xs delete-item-button col-6 col-md-2" data-id={{list._id}}>Delete</button>
-    </div>
-    
     <div class="row">
-  <span class="description col-12"> {{list.description}} </span>
-</div>
-</div>
+      <div class="col-12 col-md-8">
+        <input class="checkbox align-middle" data-id={{list._id}} type="checkbox">
+        <span class="title align-middle"> {{list.title}} </span>
+      </div>
+      <button class="update-item-button list-button btn btn-xs col-6 col-md-2" data-toggle="modal"
+        data-target="#update-item-modal" data-id={{list._id}}>Update</button>
+      <button class="pl-1 list-button btn btn-xs delete-item-button col-6 col-md-2" data-id={{list._id}}>Delete</button>
+    </div>
+
+    <div class="row">
+      <span class="description col-12"> {{list.description}} </span>
+    </div>
+  </div>
   {{/if}}
 </section>
 
